fix: Text truncate

--- a/src/components/environments/environments.scss
+++ b/src/components/environments/environments.scss
@@ -213,3 +213,8 @@ $border-color: rgba(227, 228, 230, 0.7);
   float: left;
   width: 100%;
 }
+
+.max-90{
+  max-width: 90%;
+  margin: 0 auto;
+}
